update route use angular-ui-router

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
 <body>
     <h1 class="text-center">Hello World</h1>
     <ul class="menu">
-        <li><a href="#/demo">Demo</a></li>
-        <li><a href="#/test">Test</a></li>
+        <li><a ui-sref="demo">Demo</a></li>
+        <li><a ui-sref="test">Test</a></li>
     </ul>
-    <div ng-view=""></div>
+    <div ui-view=""></div>
 </body>
 
 </html>
