--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title Page</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <script src="bower_components/requirejs/require.js" data-main="public/js/main.js"></script>
+    <script src="bower_components/requirejs/require.js" data-main="app/js/main.js"></script>
 </head>
 
 <body>
